--- a/Try/package.json
+++ b/Try/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mota",
+  "name": "try",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,7 +12,7 @@
     "expo": "~51.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "^0.74.1"
+    "react-native": "0.74.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
