--- a/RNNavigation-Drawer/app.json
+++ b/RNNavigation-Drawer/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.angryrich.RNNavigationDrawer"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a40e28c7-fdf0-4b31-8031-a1229d28ffad"
+      }
     }
   }
 }
