--- a/RNNavigation-Stack/app.json
+++ b/RNNavigation-Stack/app.json
@@ -22,6 +22,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "74dddf60-7700-47ad-9cb8-11b0990bd18a"
+      }
     }
   }
 }
